# M5unified-ESP32P4

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ESP32P4_MIGRATION_GUIDE.md  GITHUB_LAUNCH_GUIDE.md  README.md  README_ESP32P4.md  RELEASE.md  idf_component.yml  library.json  library.properties  m5u_plan.md  platformio_esp32p4.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/ESP32P4_Tab5_Basic/: ESP32P4_Tab5_Basic.ino
src/: M5Unified.cpp  M5Unified.hpp  gitTagVersion.h
src/utility/: Mic_Class.cpp  Power_Class.cpp  RTC8563_Class.cpp  RTC8563_Class.hpp  rtc_esp32p4.cpp  rtc_esp32p4.h
